--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
+  background-color: #0e0f0f;
+  background-size: cover;
+  background-repeat: no-repeat;
   font-family:  'Helvetica Neue',
     sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.bg-graysh {
+  background-color: #1e1e23;
 }
